feat(教程部分完毕)

--- a/1_basic/1_common.html
+++ b/1_basic/1_common.html
@@ -36,6 +36,8 @@
     <!-- <script src="./13_coordinate/test.js"></script> -->
 
     <!-- 第四节 标注 -->
-    <script src="./14_Annotation/14_1_dataMark.js"></script>
+    <!-- <script src="./14_Annotation/14_1_dataMark.js"></script> -->
+    <!-- <script src="./14_Annotation/14_2_selectMark.js"></script> -->
+    <script src="./14_Annotation/14_3_markChange.js"></script>
 </body>
 </html>
